css overflow issue fixed

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
-
+body{
+    overflow-x:hidden;
+}
 .App{
   background: #000;
 }
